Overflow fix with tools

--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,10 @@ body {
   font-size: 2.5rem;
 }
 
+.container h3 {
+  text-align: center;
+}
+
 .container p {
   font-size: 1.2rem;
   text-align: justify;
